<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_text_daily_forecast">Get Weather</string>
    <string name="forecaste_item_date_tilte">Date:</string>
    <string name="forecaste_item_average_temperature_title">Average Temperature:</string>
    <string name="forecaste_item_pressure_tilte">Pressure:</string>
    <string name="forecaste_item_humidity_tilte">Humidity:</string>
    <string name="forecaste_item_description_tilte">Description:</string>
    <string name="edit_text_hint_location_name">location name</string>
</resources>