<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyForecastFragment">

    <TextView
        android:id="@+id/text_view_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecaste_item_date_tilte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/text_view_average_temperature_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecaste_item_average_temperature_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_date_title" />
    <TextView
        android:id="@+id/text_view_pressure_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecaste_item_pressure_tilte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_average_temperature_title" />
    <TextView
        android:id="@+id/text_view_humidity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecaste_item_humidity_tilte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_pressure_title" />
    <TextView
        android:id="@+id/text_view_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecaste_item_description_tilte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_humidity_title" />

    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/text_view_date_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Tue, 10 Mar 020"/>

    <TextView
        android:id="@+id/text_view_average_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/text_view_average_temperature_title"
        app:layout_constraintTop_toBottomOf="@id/text_view_date_title"
        tools:text="20˚C"/>

    <TextView
        android:id="@+id/text_view_pressure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/text_view_pressure_title"
        app:layout_constraintTop_toBottomOf="@id/text_view_average_temperature_title"
        tools:text="1030"/>

    <TextView
        android:id="@+id/text_view_humidity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/text_view_humidity_title"
        app:layout_constraintTop_toBottomOf="@id/text_view_pressure_title"
        tools:text="71%"/>

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/text_view_description_title"
        app:layout_constraintTop_toBottomOf="@id/text_view_humidity_title"
        tools:text="light rain"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/material_dynamic_neutral0"
        app:layout_constraintTop_toBottomOf="@id/text_view_description_title" />

</androidx.constraintlayout.widget.ConstraintLayout>